--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Chart</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script type="text/javascript" src="Tools/gl-matrix-min.js"></script>
+<script type="text/javascript" src="Tools/gl-matrix.js"></script>
 <script type="text/javascript" src="Tools/glUtils.js"></script>
 
 <script type="text/javascript" src="Scripts/application.js"></script>
