--- a/index.html
+++ b/index.html
@@ -3,40 +3,40 @@
 <head>
 <title>Chart</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script type="text/javascript" src="Tools/gl-matrix.js"></script>
-<script type="text/javascript" src="Tools/glUtils.js"></script>
+<script type="text/javascript" src="tools/gl-matrix.js"></script>
+<script type="text/javascript" src="tools/glUtils.js"></script>
 
-<script type="text/javascript" src="Scripts/application.js"></script>
-<script type="text/javascript" src="Scripts/camera.js"></script>
-<script type="text/javascript" src="Scripts/camera_inter.js"></script>
-<script type="text/javascript" src="Scripts/configure_chart.js"></script>
-<script type="text/javascript" src="Scripts/globals.js"></script>
-<script type="text/javascript" src="Scripts/light.js"></script>
-<script type="text/javascript" src="Scripts/picker.js"></script>
-<script type="text/javascript" src="Scripts/program.js"></script>
-<script type="text/javascript" src="Scripts/scene.js"></script>
-<script type="text/javascript" src="Scripts/scene_transforms.js"></script>
-<script type="text/javascript" src="Scripts/series.js"></script>
-<script type="text/javascript" src="Scripts/text.js"></script>
-<script type="text/javascript" src="Scripts/texture.js"></script>
-<script type="text/javascript" src="Scripts/demo.js"></script>
-<script type="text/javascript" src="Scripts/start.js"></script>
+<script type="text/javascript" src="scripts/inCharts3d.js"></script>
+<script type="text/javascript" src="scripts/camera.js"></script>
+<script type="text/javascript" src="scripts/camera_inter.js"></script>
+<script type="text/javascript" src="scripts/configure_chart.js"></script>
+<script type="text/javascript" src="scripts/globals.js"></script>
+<script type="text/javascript" src="scripts/light.js"></script>
+<script type="text/javascript" src="scripts/picker.js"></script>
+<script type="text/javascript" src="scripts/program.js"></script>
+<script type="text/javascript" src="scripts/scene.js"></script>
+<script type="text/javascript" src="scripts/scene_transforms.js"></script>
+<script type="text/javascript" src="scripts/series.js"></script>
+<script type="text/javascript" src="scripts/text.js"></script>
+<script type="text/javascript" src="scripts/texture.js"></script>
+<script type="text/javascript" src="scripts/demo.js"></script>
+<script type="text/javascript" src="scripts/start.js"></script>
 
-<script type="text/javascript" src="Shaders/vShader.js"></script>
-<script type="text/javascript" src="Shaders/fShader.js"></script>
+<script type="text/javascript" src="shaders/vShader.js"></script>
+<script type="text/javascript" src="shaders/fShader.js"></script>
 
 <script type="text/javascript">
 
 </script>
 </head>
 
-<body onload="webGLStart();"> 
+<body onload="inChartsStart();"> 
    
   <canvas id="text" style="display: none" width="256" height="256"></canvas> 
   <canvas id="canvas" style="border: 1px solid;" width="1000" height="600"></canvas>
   
   <button onclick="start();">Next</button> 
-  
+
 </body>
 </html>
 
